[gd_scene load_steps=19 format=3 uid="uid://2b7vjy23c3lh"]

[ext_resource type="Script" path="res://Scripts/XRSetup.gd" id="1_ijei3"]
[ext_resource type="Script" path="res://Scripts/PlayerMovement.gd" id="2_ktjwo"]
[ext_resource type="Script" path="res://Scripts/Contollers/SwitchControllers.gd" id="3_1aqbc"]
[ext_resource type="PackedScene" uid="uid://bfgjo42yw61v2" path="res://SceneInstances/JetpackController.tscn" id="4_xcc3m"]
[ext_resource type="PackedScene" uid="uid://c0fia5kqtyu4c" path="res://SceneInstances/JBubbleCursor.tscn" id="5_om7fd"]
[ext_resource type="PackedScene" uid="uid://dmkjj2o6d4yle" path="res://SceneInstances/JFlashlightSelection.tscn" id="6_jo1uv"]
[ext_resource type="PackedScene" uid="uid://d2ny4h0w312eh" path="res://Models/Animals/Deer/Deer.glb" id="7_fdxov"]
[ext_resource type="PackedScene" uid="uid://bn6laar0b1t3p" path="res://SceneInstances/GUI.tscn" id="7_hk6nw"]
[ext_resource type="PackedScene" uid="uid://bembmau1gxhyb" path="res://Models/Animals/Fox/Fox.glb" id="8_0kmie"]
[ext_resource type="Script" path="res://Scripts/Orbs/WebHandler2.gd" id="8_oxtol"]
[ext_resource type="PackedScene" uid="uid://b3pr0ff3ly0b3" path="res://Models/Animals/Duck/Duck.glb" id="9_6i68h"]
[ext_resource type="PackedScene" uid="uid://caxcapgoijnvn" path="res://SceneInstances/JTestOrb.tscn" id="9_abwqo"]
[ext_resource type="PackedScene" uid="uid://c4j4xocvlth1f" path="res://Models/Animals/Squirrel/Squirrel.glb" id="10_41wjm"]
[ext_resource type="PackedScene" uid="uid://bvuii2i1lenug" path="res://Models/Animals/Coyote/Coyote.glb" id="11_s8fai"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5cj7l"]
sky_top_color = Color(0.384314, 0.454902, 0.713726, 1)
sky_horizon_color = Color(0.556863, 0.654902, 0.670588, 1)
ground_bottom_color = Color(0.258159, 0.431479, 0.176322, 1)
ground_horizon_color = Color(0.243137, 0.427451, 0.337255, 1)
sun_angle_max = 56.26

[sub_resource type="Sky" id="Sky_sqtp2"]
sky_material = SubResource("ProceduralSkyMaterial_5cj7l")

[sub_resource type="Environment" id="Environment_u8y0r"]
background_mode = 2
sky = SubResource("Sky_sqtp2")

[sub_resource type="BoxShape3D" id="BoxShape3D_l7vjb"]
size = Vector3(10000, 0, 10000)

[node name="Main" type="Node3D"]
script = ExtResource("1_ijei3")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.55686)
script = ExtResource("2_ktjwo")

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LeftController" type="XRController3D" parent="XROrigin3D" groups=["controllers"]]
tracker = &"left_hand"
script = ExtResource("3_1aqbc")
jetpack_scene = ExtResource("4_xcc3m")
bubble_cursor_scene = ExtResource("5_om7fd")
flashlight_scene = ExtResource("6_jo1uv")
is_left = true

[node name="RightController" type="XRController3D" parent="XROrigin3D" groups=["controllers"]]
tracker = &"right_hand"
script = ExtResource("3_1aqbc")
jetpack_scene = ExtResource("4_xcc3m")
bubble_cursor_scene = ExtResource("5_om7fd")
flashlight_scene = ExtResource("6_jo1uv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_u8y0r")

[node name="groundPlane" type="StaticBody3D" parent="WorldEnvironment"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldEnvironment/groundPlane"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0)
shape = SubResource("BoxShape3D_l7vjb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.979099, -0.105669, -0.173781, 0.201736, 0.39595, 0.895839, -0.0258536, -0.912172, 0.408991, 0, 0, 0)

[node name="Gui" parent="WorldEnvironment" instance=ExtResource("7_hk6nw")]
transform = Transform3D(0.590268, 0, -0.807207, 0, 1, 0, 0.807207, 0, 0.590268, 4.86807, 1.87913, -0.00872278)

[node name="Web" type="Node3D" parent="."]
script = ExtResource("8_oxtol")

[node name="Shelf" type="Node3D" parent="."]

[node name="DeerOrb" parent="Shelf" instance=ExtResource("9_abwqo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.57051, 0, 0)
skeleton = NodePath("../../Web")
animalName = "deer"
goalLoc = Vector3(1.5, 2.7, -3)

[node name="Deer" parent="Shelf/DeerOrb" instance=ExtResource("7_fdxov")]
transform = Transform3D(0.005, 0, 0, 0, 0.005, 0, 0, 0, 0.005, 0, 0, 0)

[node name="FoxOrb" parent="Shelf" instance=ExtResource("9_abwqo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.26623, 0, 0)
skeleton = NodePath("../..")
animalName = "fox"
goalLoc = Vector3(0, 1.6, -6)

[node name="Fox" parent="Shelf/FoxOrb" instance=ExtResource("8_0kmie")]
transform = Transform3D(0.13, 0, 0, 0, 0.13, 0, 0, 0, 0.13, 0, -0.2, 0)

[node name="DuckOrb" parent="Shelf" instance=ExtResource("9_abwqo")]
skeleton = NodePath("../../Web")
animalName = "duck"
goalLoc = Vector3(4, 1, -2.6)

[node name="Duck" parent="Shelf/DuckOrb" instance=ExtResource("9_6i68h")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -0.2, 0)

[node name="SquirrelOrb" parent="Shelf" instance=ExtResource("9_abwqo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31128, 0, 0)
skeleton = NodePath("../../Web")
animalName = "squirrel"
goalLoc = Vector3(-4.6, 2.6, -4.3)

[node name="Squirrel" parent="Shelf/SquirrelOrb" instance=ExtResource("10_41wjm")]
transform = Transform3D(0.006, 0, 0, 0, 0.006, 0, 0, 0, 0.006, 0, 0, 0)

[node name="CoyoteOrb" parent="Shelf" instance=ExtResource("9_abwqo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.61616, 0, 0)
skeleton = NodePath("../../Web")
animalName = "coyote"
goalLoc = Vector3(-2.5, 0.5, -1.4)

[node name="Coyote" parent="Shelf/CoyoteOrb" instance=ExtResource("11_s8fai")]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, -0.287, 0)

[connection signal="button_pressed" from="XROrigin3D/LeftController" to="XROrigin3D/LeftController" method="_on_button_pressed"]
[connection signal="button_released" from="XROrigin3D/LeftController" to="XROrigin3D/LeftController" method="_on_button_released"]
[connection signal="input_float_changed" from="XROrigin3D/LeftController" to="XROrigin3D/LeftController" method="_on_input_float_changed"]
[connection signal="input_vector2_changed" from="XROrigin3D/LeftController" to="XROrigin3D/LeftController" method="_on_input_vector_2_changed"]
[connection signal="button_pressed" from="XROrigin3D/RightController" to="XROrigin3D/RightController" method="_on_button_pressed"]
[connection signal="button_released" from="XROrigin3D/RightController" to="XROrigin3D/RightController" method="_on_button_released"]
[connection signal="input_float_changed" from="XROrigin3D/RightController" to="XROrigin3D/RightController" method="_on_input_float_changed"]
[connection signal="input_vector2_changed" from="XROrigin3D/RightController" to="XROrigin3D/RightController" method="_on_input_vector_2_changed"]
